<resources>
    <string name="app_name">ui</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="book_your_flight">Book your flight</string>
    <string name="origin_title">Origin</string>
    <string name="destination_title">Destination</string>
    <string name="discover_new_places">Discover new places...</string>
    <string name="select_date">Select date</string>
    <string name="return_title">Return</string>
    <string name="one_way">One way</string>
    <string name="search_flights_btn">Search flights</string>
    <string name="new_search_button">New search</string>
    <string name="leaving_from">Leaving from</string>
    <string name="search_hint">Search</string>
    <string name="select">Select</string>
    <string name="are_u_sure">Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="passengers_title">Passengers</string>
    <string name="add_passengers">Add passengers</string>
    <string name="adults_title">16+</string>
    <string name="adults">Adults</string>
    <string name="childs_title">2-14</string>
    <string name="childs">Childs</string>
    <string name="infants_title">0-2</string>
    <string name="infants">Infants</string>
    <string name="apply_changes">Apply changes</string>
    <string name="departure_title">Departue</string>
    <string name="please_select_destination_and_origin">Please select destination and origin</string>
    <string name="flight_date">Flight date</string>

    <plurals name="adults_plural">
        <item quantity="one">%d Adult</item>
        <item quantity="other">%d Adults</item>
    </plurals>

    <plurals name="childs_plural">
        <item quantity="one">%d Child</item>
        <item quantity="other">%d Childs</item>
    </plurals>

    <plurals name="infants_plural">
        <item quantity="one">%d Infant</item>
        <item quantity="other">%d Infants</item>
    </plurals>
</resources>
