<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="co.gotoinc.ui.view.book_flight.BookViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <TextView
                android:id="@+id/originTitle"
                style="@style/BookFlightFieldTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/main_space"
                android:layout_marginTop="@dimen/space_x_1_5"
                android:text="@string/origin_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/originContainer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:onClick="@{viewModel.listener::onClick}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/originTitle"
                app:layout_constraintTop_toBottomOf="@+id/originTitle">

                <TextView
                    android:id="@+id/origin"
                    style="@style/BookFlightFieldSelectableField"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/main_space"
                    android:hint="@string/select"
                    android:text='@{viewModel.flightEntity.displayOrigin}'
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:id="@+id/divider"
                    style="@style/Divider"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="@dimen/space_x0_5"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/origin" />

                <ImageView
                    android:id="@+id/iata"
                    style="@style/ArrowBottom"
                    android:layout_marginEnd="@dimen/main_space"
                    app:layout_constraintBottom_toBottomOf="@+id/origin"
                    app:layout_constraintEnd_toEndOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/destinationTitle"
                style="@style/BookFlightFieldTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_x_1_5"
                android:text="@string/destination_title"
                app:layout_constraintStart_toStartOf="@+id/originContainer"
                app:layout_constraintTop_toBottomOf="@+id/originContainer" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/destinationContainer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:onClick="@{viewModel.listener::onClick}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/destinationTitle"
                app:layout_constraintTop_toBottomOf="@+id/destinationTitle">

                <TextView
                    android:id="@+id/destination"
                    style="@style/BookFlightFieldSelectableField"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/main_space"
                    android:hint="@string/discover_new_places"
                    android:text='@{viewModel.flightEntity.displayDestination}'
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/imageView2"
                    style="@style/ArrowBottom"
                    android:layout_marginEnd="@dimen/main_space"
                    app:layout_constraintBottom_toBottomOf="@+id/destination"
                    app:layout_constraintEnd_toEndOf="parent" />

                <View
                    android:id="@+id/divider2"
                    style="@style/Divider"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="@dimen/space_x0_5"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/destination"
                    app:layout_constraintTop_toBottomOf="@+id/destination" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:id="@+id/divider3"
                style="@style/Divider"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/space_x0_5"
                android:layout_marginEnd="@dimen/main_space"
                app:layout_constraintEnd_toStartOf="@+id/divider4"
                app:layout_constraintStart_toStartOf="@+id/departure"
                app:layout_constraintTop_toBottomOf="@+id/departure" />

            <ImageView
                android:id="@+id/imageView3"
                style="@style/ArrowBottom"
                android:layout_marginEnd="@dimen/main_space"
                app:layout_constraintBottom_toBottomOf="@+id/departure"
                app:layout_constraintEnd_toEndOf="@+id/divider3" />

            <TextView
                android:id="@+id/departureTitle"
                style="@style/BookFlightFieldTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_x_1_5"
                android:text="@string/destination_title"
                app:layout_constraintStart_toStartOf="@+id/destinationContainer"
                app:layout_constraintTop_toBottomOf="@+id/destinationContainer" />

            <TextView
                android:id="@+id/departure"
                style="@style/BookFlightFieldSelectableField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/main_space"
                android:enabled="false"
                android:hint="@string/select_date"
                app:layout_constraintStart_toStartOf="@+id/departureTitle"
                app:layout_constraintTop_toBottomOf="@+id/departureTitle" />

            <TextView
                android:id="@+id/returnTitle"
                style="@style/BookFlightFieldTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_x0_5"
                android:layout_marginTop="@dimen/space_x_1_5"
                android:text="@string/return_title"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/destinationContainer" />

            <ImageView
                android:id="@+id/imageView4"
                style="@style/ArrowBottom"
                android:layout_marginEnd="@dimen/main_space"
                app:layout_constraintBottom_toBottomOf="@+id/returnField"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/returnField"
                style="@style/BookFlightFieldSelectableField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/main_space"
                android:enabled="false"
                android:hint="@string/one_way"
                app:layout_constraintStart_toStartOf="@+id/returnTitle"
                app:layout_constraintTop_toBottomOf="@+id/departureTitle" />

            <View
                android:id="@+id/divider4"
                style="@style/Divider"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/space_x0_5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/returnField"
                app:layout_constraintTop_toBottomOf="@+id/returnField" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="@dimen/main_space"
                android:layout_height="0dp"
                android:orientation="vertical"
                android:visibility="invisible"
                app:layout_constraintGuide_percent="0.5" />

            <ImageView
                android:id="@+id/imageView5"
                style="@style/ArrowBottom"
                android:layout_marginEnd="@dimen/main_space"
                app:layout_constraintBottom_toBottomOf="@+id/passengers"
                app:layout_constraintEnd_toEndOf="parent" />

            <View
                android:id="@+id/divider5"
                style="@style/Divider"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/space_x0_5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/passengers"
                app:layout_constraintTop_toBottomOf="@+id/passengers" />

            <TextView
                android:id="@+id/passengersTitle"
                style="@style/BookFlightFieldTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_x_1_5"
                android:text="@string/destination_title"
                app:layout_constraintStart_toStartOf="@+id/destinationContainer"
                app:layout_constraintTop_toBottomOf="@+id/divider3" />

            <TextView
                android:id="@+id/passengers"
                style="@style/BookFlightFieldSelectableField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/main_space"
                android:enabled="false"
                android:text="1 Adult"
                app:layout_constraintStart_toStartOf="@+id/passengersTitle"
                app:layout_constraintTop_toBottomOf="@+id/passengersTitle"
                tools:text="1 Adult" />

            <Button
                android:id="@+id/searchFlightsBtn"
                style="@style/SearchFlightsButton"
                android:layout_width="0dp"
                android:layout_marginStart="@dimen/main_space"
                android:layout_marginTop="@dimen/main_space_x2"
                android:layout_marginEnd="@dimen/main_space"
                android:includeFontPadding="false"
                android:text="@string/search_flights_btn"
                android:textAllCaps="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider5" />

            <Space
                android:id="@+id/space"
                android:layout_width="match_parent"
                android:layout_height="@dimen/main_space_x2"
                app:layout_constraintTop_toBottomOf="@+id/newSearchButton"
                tools:layout_editor_absoluteX="195dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/newSearchButton"
                style="@style/NewSearchButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/main_space"
                android:layout_marginTop="@dimen/main_space_x2"
                android:layout_marginEnd="@dimen/main_space"
                android:onClick="@{viewModel.listener::onClick}"
                android:text="@string/new_search_button"
                android:textAllCaps="false"
                app:layout_constraintEnd_toEndOf="@+id/searchFlightsBtn"
                app:layout_constraintStart_toStartOf="@+id/searchFlightsBtn"
                app:layout_constraintTop_toBottomOf="@+id/searchFlightsBtn" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>